// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ProductionFields Component should match the snapshot when rendering a product without additional data 1`] = `
<Fragment>
  <FormFieldTemplate
    classNames="form-group field field-string"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productRowId"
    label="Product or Service"
    required={true}
    schema={
      Object {
        "enum": Array [
          1,
          2,
        ],
        "enumNames": Array [
          "foo",
          "simpleFoo",
        ],
        "title": "Product or Service",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <StringField
      autofocus={false}
      disabled={false}
      errorSchema={null}
      formContext={Object {}}
      formData={1}
      name="product"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "enum": Array [
            1,
            2,
          ],
          "enumNames": Array [
            "foo",
            "simpleFoo",
          ],
          "title": "Product or Service",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productionAllocationFactor"
    label="Emission allocation factor (%)"
    required={true}
    schema={
      Object {
        "exclusiveMinimum": 0,
        "maximum": 100,
        "title": "Emission allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "exclusiveMinimum": 0,
          "maximum": 100,
          "title": "Emission allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.quantity"
    label="Annual Production Amount"
    required={true}
    schema={
      Object {
        "title": "Annual Production Amount",
        "type": "number",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="quantity"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "title": "Annual Production Amount",
          "type": "number",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-string"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productUnits"
    label="Units"
    required={false}
    schema={
      Object {
        "title": "Units",
        "type": "string",
      }
    }
    uiSchema={Object {}}
  >
    <StringField
      autofocus={false}
      disabled={true}
      errorSchema={null}
      formContext={Object {}}
      formData="baz"
      name="productUnits"
      onChange={[Function]}
      readonly={true}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "title": "Units",
          "type": "string",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.importedElectricityAllocationFactor"
    label="Imported electricity allocation factor (%)"
    required={false}
    schema={
      Object {
        "maximum": 100,
        "minimum": 0,
        "title": "Imported electricity allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "maximum": 100,
          "minimum": 0,
          "title": "Imported electricity allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.importedHeatAllocationFactor"
    label="Imported heat allocation factor (%)"
    required={false}
    schema={
      Object {
        "maximum": 100,
        "minimum": 0,
        "title": "Imported heat allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "maximum": 100,
          "minimum": 0,
          "title": "Imported heat allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <ObjectField
    autofocus={false}
    disabled={false}
    errorSchema={Object {}}
    formContext={Object {}}
    formData={Object {}}
    idSchema={
      Object {
        "$id": "production",
        "additionalFoo": Object {
          "$id": "production_additionalFoo",
        },
      }
    }
    name={null}
    onChange={[Function]}
    readonly={false}
    registry={
      Object {
        "ArrayFieldTemplate": [Function],
        "FieldTemplate": [Function],
        "ObjectFieldTemplate": [Function],
        "definitions": Object {},
        "fields": Object {
          "AnyOfField": [Function],
          "ArrayField": [Function],
          "BooleanField": [Function],
          "DescriptionField": [Function],
          "NullField": [Function],
          "NumberField": [Function],
          "ObjectField": [Function],
          "OneOfField": [Function],
          "SchemaField": [Function],
          "StringField": [Function],
          "TitleField": [Function],
          "UnsupportedField": [Function],
        },
        "formContext": Object {},
        "widgets": Object {
          "AltDateTimeWidget": [Function],
          "AltDateWidget": [Function],
          "BaseInput": [Function],
          "CheckboxWidget": [Function],
          "CheckboxesWidget": [Function],
          "ColorWidget": [Function],
          "DateTimeWidget": [Function],
          "DateWidget": [Function],
          "EmailWidget": [Function],
          "FileWidget": [Function],
          "HiddenWidget": [Function],
          "PasswordWidget": [Function],
          "RadioWidget": [Function],
          "RangeWidget": [Function],
          "SelectWidget": [Function],
          "TextWidget": [Function],
          "TextareaWidget": [Function],
          "URLWidget": [Function],
          "UpDownWidget": [Function],
        },
      }
    }
    required={true}
    schema={
      Object {
        "properties": Object {
          "additionalFoo": Object {
            "type": "string",
          },
        },
        "type": "object",
      }
    }
    uiSchema={
      Object {
        "additionalFoo": Object {
          "ui:col-md": 12,
        },
      }
    }
  />
</Fragment>
`;

exports[`The ProductionFields Component should match the snapshot when rendering additional data 1`] = `
<Fragment>
  <FormFieldTemplate
    classNames="form-group field field-string"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productRowId"
    label="Product or Service"
    required={true}
    schema={
      Object {
        "enum": Array [
          1,
          2,
        ],
        "enumNames": Array [
          "foo",
          "simpleFoo",
        ],
        "title": "Product or Service",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <StringField
      autofocus={false}
      disabled={false}
      errorSchema={null}
      formContext={Object {}}
      formData={1}
      name="product"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "enum": Array [
            1,
            2,
          ],
          "enumNames": Array [
            "foo",
            "simpleFoo",
          ],
          "title": "Product or Service",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productionAllocationFactor"
    label="Emission allocation factor (%)"
    required={true}
    schema={
      Object {
        "exclusiveMinimum": 0,
        "maximum": 100,
        "title": "Emission allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "exclusiveMinimum": 0,
          "maximum": 100,
          "title": "Emission allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.quantity"
    label="Annual Production Amount"
    required={true}
    schema={
      Object {
        "title": "Annual Production Amount",
        "type": "number",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="quantity"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={true}
      schema={
        Object {
          "title": "Annual Production Amount",
          "type": "number",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-string"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.productUnits"
    label="Units"
    required={false}
    schema={
      Object {
        "title": "Units",
        "type": "string",
      }
    }
    uiSchema={Object {}}
  >
    <StringField
      autofocus={false}
      disabled={true}
      errorSchema={null}
      formContext={Object {}}
      formData="bar"
      name="productUnits"
      onChange={[Function]}
      readonly={true}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "title": "Units",
          "type": "string",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.importedElectricityAllocationFactor"
    label="Imported electricity allocation factor (%)"
    required={false}
    schema={
      Object {
        "maximum": 100,
        "minimum": 0,
        "title": "Imported electricity allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "maximum": 100,
          "minimum": 0,
          "title": "Imported electricity allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <FormFieldTemplate
    classNames="form-group field field-number"
    errors={<ErrorList />}
    formContext={Object {}}
    hidden={false}
    id="product.importedHeatAllocationFactor"
    label="Imported heat allocation factor (%)"
    required={false}
    schema={
      Object {
        "maximum": 100,
        "minimum": 0,
        "title": "Imported heat allocation factor (%)",
        "type": "integer",
      }
    }
    uiSchema={Object {}}
  >
    <NumberField
      autofocus={false}
      disabled={false}
      formContext={Object {}}
      name="allocationFactor"
      onChange={[Function]}
      readonly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
          },
        }
      }
      required={false}
      schema={
        Object {
          "maximum": 100,
          "minimum": 0,
          "title": "Imported heat allocation factor (%)",
          "type": "integer",
        }
      }
      uiSchema={Object {}}
    />
  </FormFieldTemplate>
  <ObjectField
    autofocus={false}
    disabled={false}
    errorSchema={Object {}}
    formContext={Object {}}
    formData={
      Object {
        "additionalFoo": "foofoo",
      }
    }
    idSchema={
      Object {
        "$id": "production",
        "additionalFoo": Object {
          "$id": "production_additionalFoo",
        },
      }
    }
    name={null}
    onChange={[Function]}
    readonly={false}
    registry={
      Object {
        "ArrayFieldTemplate": [Function],
        "FieldTemplate": [Function],
        "ObjectFieldTemplate": [Function],
        "definitions": Object {},
        "fields": Object {
          "AnyOfField": [Function],
          "ArrayField": [Function],
          "BooleanField": [Function],
          "DescriptionField": [Function],
          "NullField": [Function],
          "NumberField": [Function],
          "ObjectField": [Function],
          "OneOfField": [Function],
          "SchemaField": [Function],
          "StringField": [Function],
          "TitleField": [Function],
          "UnsupportedField": [Function],
        },
        "formContext": Object {},
        "widgets": Object {
          "AltDateTimeWidget": [Function],
          "AltDateWidget": [Function],
          "BaseInput": [Function],
          "CheckboxWidget": [Function],
          "CheckboxesWidget": [Function],
          "ColorWidget": [Function],
          "DateTimeWidget": [Function],
          "DateWidget": [Function],
          "EmailWidget": [Function],
          "FileWidget": [Function],
          "HiddenWidget": [Function],
          "PasswordWidget": [Function],
          "RadioWidget": [Function],
          "RangeWidget": [Function],
          "SelectWidget": [Function],
          "TextWidget": [Function],
          "TextareaWidget": [Function],
          "URLWidget": [Function],
          "UpDownWidget": [Function],
        },
      }
    }
    required={true}
    schema={
      Object {
        "properties": Object {
          "additionalFoo": Object {
            "type": "string",
          },
        },
        "type": "object",
      }
    }
    uiSchema={
      Object {
        "additionalFoo": Object {
          "ui:col-md": 12,
        },
      }
    }
  />
</Fragment>
`;
